word wrap issue

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -728,6 +728,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow: hidden;
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
